Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -18,3 +18,33 @@
 </html>
 
 Popper・・・ポップアップ用のライブラリです。Bootstrapのドロップダウンなどに、使用されている
+
+
+
+<h1>Heading 1</h1>
+  <h6>Heading 6</h6>
+  <p class="h1">Heading 1</p>
+  <p class="h6">Heading 6</p>
+
+.h1～6・・・見出し（Heading）クラスで、
+CSSで「font-size（文字の大きさ）、font-weight（太さ）、line-height（行間）」定義されている
+h1が1番大きい
+
+
+
+  <p class="display-1">Display 1</p>
+  <p class="display-6">Display 6</p>
+
+見出しを目立たせたい場合は、
+.display-1～6・・・Display headingクラスで、
+目立つように、.h1～6より大きな文字が定義されている
+desplay-1が1番大きい
+
+
+
+<p class="fs-1">Font size 1</p>
+<p class="fs-6">Font size 6</p> 
+
+フォントサイズだけを変更したい場合は、
+.fs-1～6・・・Font sizeのクラスで、CSSで「font-size」が定義されている
+fs-1が1番大きい
