Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -41,10 +41,26 @@ h1が1番大きい
 desplay-1が1番大きい
 
 
-
 <p class="fs-1">Font size 1</p>
 <p class="fs-6">Font size 6</p> 
 
-フォントサイズだけを変更したい場合は、
 .fs-1～6・・・Font sizeのクラスで、CSSで「font-size」が定義されている
 fs-1が1番大きい
+
+
+
+Colors (カラー) の変更方法・・・.text-テーマカラー、.bg-テーマカラー
+「テキスト」や「背景」に色を付けたい場合、
+
+<p class="text-primary">text-primary</p>
+
+.text-*・・・テキストに色を付ける、
+例えば「.text-primary」を使うと、青になる
+
+
+
+<p class="bg-danger text-white">bg-danger</p>
+
+.bg-*・・・背景に色を付ける、
+例えば「.bg-danger」を使うと、赤になる
+フォントサイズだけを変更したい場合は、
