Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -82,3 +82,38 @@ Buttons (ボタン) の表示方法・・・.btn、.btn-テーマカラー
 
 <button type="button" class="btn btn-outline-danger">Danger</button>
 枠だけのボタンを作りたい場合は、アウトラインボタンを使う
+
+
+
+Spacing (スペーシング) の指定方法・・・.m、.p
+
+<div class="m-3 p-3">
+  text
+</div>
+
+.m-*・・・マージン（外側の余白）を、0～5で指定できる
+.p-*・・・パディング（内側の余白）を、0～5で指定できる
+
+
+<div class="mt-3 pb-3">
+  text
+</div>
+
+t・・・上（top）に余白を付ける
+b・・・下（bottom）に余白を付ける
+
+
+<div class="ms-3 pe-3">
+  text
+</div>
+
+s・・・左（start）に余白を付ける(RTLの場合、右です)
+e・・・右（end）に余白を付ける(RTLの場合、左です)
+
+
+<div class="mx-3 py-3 bg-info">
+  text
+</div>
+
+x・・・左右に余白を付ける
+y・・・上下に余白を付ける
