Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -117,3 +117,44 @@ e・・・右（end）に余白を付ける(RTLの場合、左です)
 
 x・・・左右に余白を付ける
 y・・・上下に余白を付ける
+
+
+
+グリッドシステム・・・画面を12分割にして表示するシステム、
+グリッドシステムを使う場合は最初にコンテナが必要になる
+
+コンテナ・・・画面サイズに応じて最大幅を調整してくれる
+.container・・・画面サイズで幅を調整する、基本的なレイアウト要素
+.container-fluid・・・常に100%になる
+
+ブレークポイント・・・画面サイズが切り替わるポイントのこと
+　　　　　　　　　　　「container-ブレークポイント」でサイズを切り替えられる
+
+ブレークポイント     幅
+sm              576px以上
+md              768px以上
+lg              992px以上
+xl              1200px以上
+xxl             1400px以上
+
+.row・・・行を指定
+.col・・・列を指定
+
+<div class="row">
+  <div class="col-3">col-3</div>
+  <div class="col-6 bg-info">col-6</div>
+  <div class="col">col</div>
+</div>
+
+col-*・・・列は、1～12の値を指定できる
+例えば、上記のように記述すると、「3：6：3」の比率で表示される
+
+
+
+<div class="row">
+  <div class="col-6 col-md-4">1 of 3</div>
+  <div class="col-6 col-md-4">2 of 3</div>
+  <div class="col-6 col-md-4">3 of 3</div>
+</div>
+
+ブレークポイントを設定すると、768px以上は「4：4：4」、それ以外は「6：6」にできる
