Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -158,3 +158,43 @@ col-*・・・列は、1～12の値を指定できる
 </div>
 
 ブレークポイントを設定すると、768px以上は「4：4：4」、それ以外は「6：6」にできる
+
+
+
+<div class="row">
+  <div class="col text-start">text-start</div>
+  <div class="col text-center">text-center</div>
+  <div class="col text-end">text-end</div>
+</div>
+
+.text-start・・・テキストを、左に配置（RTL=右書きの場合、右）
+.text-center・・・テキストを、中央に配置
+.text-end・・・テキストを、右に配置（RTL=右書きの場合、左）
+
+
+<div class="row justify-content-center">
+  <div class="col-6">justify-content-center</div>
+</div>
+
+.justify-content-center・・・アイテムを、左右中央に配置
+左に配置する場合は、.justify-content-start
+右に配置する場合は、.justify-content-endを使用
+
+
+<div class="row align-items-center">
+  <div class="col-4">align-items-center</div>
+</div>
+.align-items-center・・・アイテムを、上下中央に配置
+上に配置する場合は、.align-items-start
+下に配置する場合は、.align-items-endを使用
+
+
+<div class="row">
+  <div class="col align-self-start">align-self-start</div>
+  <div class="col align-self-center">align-self-center</div>
+  <div class="col align-self-end">align-self-end</div>
+</div>
+
+.align-self-start・・・（自身を）上に配置
+.align-self-center・・・（自身を）上下中央に配置
+.align-self-end・・・（自身を）下に配置
