Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -198,3 +198,25 @@ col-*・・・列は、1～12の値を指定できる
 .align-self-start・・・（自身を）上に配置
 .align-self-center・・・（自身を）上下中央に配置
 .align-self-end・・・（自身を）下に配置
+
+
+
+ <!-- Bootstrap Icons CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+
+Bootstrap Iconsは、公式のアイコンライブラリで、
+bootstrap-icons.cssを、CDN（jsDeliver）で読み込むと、簡単に使える
+
+
+<p class="fs-2">
+  <i class="bi bi-pencil"></i>
+  Font size 2
+</p>
+<a href="#" class="text-decoration-none">
+  <i class="bi bi-link"></i>
+  Link text
+</a>
+
+.bi .bi-pencil・・・Pencilアイコンを使用
+.bi .bi-link・・・Linkアイコンを使用
+.text-decoration-none・・・（リンクの）下線を削除
