Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -330,3 +330,28 @@ navbar-toggler-icon・・・折りたたみのアイコン
 .nav-item .nav-link・・・ナビゲーションバーのアイテムと、リンクを定義
 .active・・・アクティブな状態を示す(対象のテキストが強調される)
 aria-current・・・スクリーンリーダーに、カレント(現在位置)を伝える
+
+
+
+<section 省略　style="padding: 80px 0 50px">
+
+paddingで３つ指定した場合は「上、左右、下」の余白を指定
+
+
+<div class="row align-itams-center g-4">
+
+g-* ・・・ガターをつける
+ガター・・・カラムの余白のこと、ガターがないと小さい画面の時などにカラムが詰まって表示される
+　　　　　　ガターは上下(gy-*)左右(gx-*)の指定できる
+
+
+<a href="#contactUs" class="btn btn-dark px-5 shadow">
+
+.shadow・・・対象に影をつける
+影を小さくしたい場合は .shadow-sm を使う
+影を大きくしたい場合は .shadow-lg を使う
+
+
+<img src="#" class="img-fluid" alt="#">
+
+.img-fluid・・・画面をレスポンシブデザインにする
