Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -355,3 +355,21 @@ g-* ・・・ガターをつける
 <img src="#" class="img-fluid" alt="#">
 
 .img-fluid・・・画面をレスポンシブデザインにする
+
+
+
+<!-- カード風 -->
+<div class="border p-3 shadow">
+  <i class="bi bi-laptop text-danger fs-1"></i>
+  <h5>プログラミング</h5>
+  <p class="text-muted">
+    アプリを作成したい人に最適です。
+  </p>
+  <a href="#content" class="btn btn-danger rounded-pill">
+    詳細はこちら
+  </a>
+ </div>
+</div>
+
+.text-muted・・・テキストをグレー(落ち着いた色)にする
+.roumded-pill・・・角を丸める
