Update: Bootstrap5.html

--- a/Bootstrap5.html
+++ b/Bootstrap5.html
@@ -373,3 +373,25 @@ g-* ・・・ガターをつける
 
 .text-muted・・・テキストをグレー(落ち着いた色)にする
 .roumded-pill・・・角を丸める
+
+
+
+<!-- 行の設定 -->
+<div class="row row-cols-l row-cols-md-4">
+
+.row-cols-*・・・行ごとに表示する列の数を設定
+row-cols-md-4・・・md(768px以上)の場合は４列でそれ以外は１列にする
+
+
+<!-- カード -->
+<div class="card text-white bg-primary mb-3 shadow">
+  <div class="card-body">
+    <h1 class="card-title">600人</h1>
+    <p class="card-text">年間受講者</p>
+  </div>
+</div>
+
+.card・・・カードを表示する
+.card-body・・・カードの本体(中身)を定義する
+.card-title・・・カードのタイトル
+.card-text・・・カードのテキスト
